make way to generate releases correctly as per https://github.com/rebar/rebar/wiki/Release-handling

--- a/rebar.config
+++ b/rebar.config
@@ -15,6 +15,8 @@
 {erl_opts, [debug_info, warn_unused_vars, warn_shadow_vars, warn_unused_import,
             warnings_as_errors, {parse_transform, lager_transform}]}.
 {lib_dirs, ["deps"]}.
+% The following will help generate a release
+{sub_dirs, ["rel"]}.
 
 {deps, [
   {'lager', ".*", {
