--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -23,7 +23,7 @@
        {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                            "^erts.*/(doc|info|include|lib|man|src)"]},
        {excl_app_filters, ["\.gitignore"]},
-       {app, helloer, [{mod_cond, app}, {incl_cond, include}]}
+       {app, helloer, [{mod_cond, app}, {incl_cond, include}, {lib_dir, ".."}]}
       ]}.
 
 {target_dir, "helloer"}.
