include deps otherwise dependencies are not found by rebar while generating a release.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,7 +1,7 @@
 %% -*- mode: erlang -*-
 %% ex: ft=erlang
 {sys, [
-       {lib_dirs, []},
+       {lib_dirs, ["../deps"]},
        {erts, [{mod_cond, derived}, {app_file, strip}]},
        {app_file, strip},
        {rel, "helloer", "1",
