Migrate to rebar3 and integrate the same to Makefile based on http://www.rebar3.org/docs/basic-usage Note that this do not build due to some version issue in sasl at present.

--- a/rebar.config
+++ b/rebar.config
@@ -24,5 +24,24 @@
     git, "https://github.com/talentdeficit/jsx.git", {tag, "v2.8.0"}}}
 ]}.
 
+{relx, [{release, { helloer, "0.1.0" },
+         [helloer,
+          sasl,
+          cowboy]},
+
+        {sys_config, "./config/sys.config"},
+        {vm_args, "./config/vm.args"},
+
+        {dev_mode, true},
+        {include_erts, false},
+
+        {extended_start_script, true}]
+}.
+
+{profiles, [{prod, [{relx, [{dev_mode, false},
+                            {include_erts, true}]}]
+            }]
+}.
+
 %% -*- mode: erlang;erlang-indent-level: 2;indent-tabs-mode: nil -*-
 %% ex: ts=2 sw=2 ft=erlang et
