only the main application need to be specified for release with rebar3.

--- a/rebar.config
+++ b/rebar.config
@@ -25,9 +25,7 @@
 ]}.
 
 {relx, [{release, { helloer, "0.1.0" },
-         [helloer,
-          sasl,
-          cowboy]},
+         [helloer]},
 
         {sys_config, "./config/sys.config"},
         {vm_args, "./config/vm.args"},
