Use the cross compilation logic as given in the link below
http://www.rebar3.org/docs/releases

The build gives a warning with respect to sasl (see below). The sasl
dependency is missing in apps/helloer/src/helloer.app.src hence the warning.

===> Resolved helloer-0.1.0
*WARNING* : Missing application sasl. Can not upgrade with this release
===> tarball /home/nsharma/IdeaProjects/hello-erlang-rump/_build/prod/rel/helloer/helloer-0.1.0.tar.gz successfully created!

--- a/rebar.config
+++ b/rebar.config
@@ -37,7 +37,8 @@
 }.
 
 {profiles, [{prod, [{relx, [{dev_mode, false},
-                            {include_erts, true}]}]
+                            {include_erts, "build/rumprun-packages/erlang/build/erlangdist/opt/erlang/lib/erlang"},
+                            {system_libs, "build/rumprun-packages/erlang/build/erlangdist/opt/erlang/lib/erlang"}]}]
             }]
 }.
 
