--- a/rebar.config
+++ b/rebar.config
@@ -37,7 +37,7 @@
 }.
 
 {profiles, [{prod, [{relx, [{dev_mode, false},
-                            {include_erts, "build/rumprun-packages/erlang/build/erlangdist/opt/erlang/lib/erlang"},
+                            {include_erts, false},
                             {system_libs, "build/rumprun-packages/erlang/build/erlangdist/opt/erlang/lib/erlang"}]}]
             }]
 }.
