do not include source in production release code.

--- a/rebar.config
+++ b/rebar.config
@@ -37,6 +37,7 @@
 }.
 
 {profiles, [{prod, [{relx, [{dev_mode, false},
+                            {include_src, false},
                             {include_erts, false},
                             {system_libs, "build/rumprun-packages/erlang/build/erlangdist/opt/erlang/lib/erlang"}]}]
             }]
