--- a/Makefile.rumprun
+++ b/Makefile.rumprun
@@ -26,6 +26,12 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
+# The makefile including this must define the following for build to
+# succeed.
+#
+# * PKGNAME  - name of the application as understood by Erlang/OTP.
+# * PKGVSN   - the version of the application built for production.
+
 
 LOCAL_PATH=$(shell pwd)
 # prefix with local path in search path so that the "erl" application
@@ -34,6 +40,8 @@ LOCAL_PATH=$(shell pwd)
 # This will allow running same erlang application on host as the
 # one built for target for maximum consistency.
 BUILT_ERL_BIN_PATH=$(LOCAL_PATH):$(LOCAL_PATH)/build/rumprun-packages/erlang/build/host_erlangdist/usr/local/bin
+
+ERLANG_BASE_META_PATH=$(LOCAL_PATH)/build/rumprun-packages/erlang
 
 ifeq ($(shell uname),Darwin)
 RUMPRUN_GENISOIMAGE=hdiutil makehybrid -iso
@@ -77,12 +85,24 @@ build/rumprun-packages/config.mk: build/rumprun-packages .rumprun_tuple
 	touch .rumprun_packages_built
 
 
-app.iso: compile
-	mkdir -p build/app-modules
-	cp deps/*/ebin/* build/app-modules/
-	cp ebin/* build/app-modules/
-	cp build/rumprun-packages/erlang/examples/setnodename/*.beam build/app-modules/
-	$(RUMPRUN_GENISOIMAGE) -o app.iso build/app-modules/
+erlang.iso: prod
+	mkdir -p _deployed/lib/erlang
+	(cd _deployed/lib/erlang; \
+	 tar -xzf ../../../_build/prod/rel/$(PKGNAME)/$(PKGNAME)-$(PKGVSN).tar.gz)
+	# copy the start.boot from application to its default location
+	# where the beam vm expects it.
+	(cd _deployed/lib/erlang/bin; \
+	 rm start.boot; \
+	 ln -s ../releases/$(PKGVSN)/start.boot start.boot)
+	# copy meta information for base erlang config
+	cp $(ERLANG_BASE_META_PATH)/erl_inetrc _deployed/
+	cp $(ERLANG_BASE_META_PATH)/hosts.template _deployed/hosts
+	cp $(ERLANG_BASE_META_PATH)/resolv.conf.template _deployed/resolv.conf
+	# setnodename is required for clustering
+	mkdir -p _deployed/lib/erlang/lib/setnodename-0.0.1/ebin
+	cp build/rumprun-packages/erlang/examples/setnodename/*.beam _deployed/lib/erlang/lib/setnodename-0.0.1/ebin
+	$(RUMPRUN_GENISOIMAGE) -o erlang.iso _deployed/
+
 
 erlrun.sh: build_rumprun_packages
 	cp build/rumprun-packages/erlang/erlrun.sh .
