--- a/Makefile.ukernel
+++ b/Makefile.ukernel
@@ -26,26 +26,36 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-# The pkg name and vsn must be set for Makefile.ukernel
-PKGNAME=helloer
-PKGVSN=0.1.0
+# must be the first thing to do
+include Makefile.rumprun
 
-.PHONY: all pkgiso
+# The makefile including this must define the following for build to
+# succeed.
+#
+# * PKGNAME  - name of the application as understood by Erlang/OTP.
+# * PKGVSN   - the version of the application built for production.
 
-all: setup_rumprun compile release prod pkgiso
-
-# Important: include after defining rule "all"
-
-# Makefile.ukernel provides: setup_rumprun $(PKGNAME)-$(PKGVSN).iso
-include Makefile.ukernel
-
-# use the custom path so that Makefile.app uses the
-# erlang installation from built location rather
-# than the system default.
-export PATH := $(BUILT_ERL_BIN_PATH):$(PATH)
-
-# Makefile.app provides: compile release prod
-include Makefile.app
+ifeq ($(shell uname),Darwin)
+RUMPRUN_GENISOIMAGE=hdiutil makehybrid -iso
+else
+RUMPRUN_GENISOIMAGE=genisoimage -l -r
+endif
 
 
-pkgiso: $(PKGNAME)-$(PKGVSN).iso
+$(PKGNAME)-$(PKGVSN).iso: prod
+	mkdir -p _deployed/lib/erlang
+	(cd _deployed/lib/erlang; \
+	 tar -xzf ../../../_build/prod/rel/$(PKGNAME)/$(PKGNAME)-$(PKGVSN).tar.gz)
+	# copy the start.boot from application to its default location
+	# where the beam vm expects it.
+	(cd _deployed/lib/erlang/bin; \
+	 rm start.boot; \
+	 ln -s ../releases/$(PKGVSN)/start.boot start.boot)
+	# copy meta information for base erlang config
+	cp $(ERLANG_BASE_META_PATH)/erl_inetrc _deployed/
+	cp $(ERLANG_BASE_META_PATH)/hosts.template _deployed/hosts
+	cp $(ERLANG_BASE_META_PATH)/resolv.conf.template _deployed/resolv.conf
+	# setnodename is required for clustering
+	mkdir -p _deployed/lib/erlang/lib/setnodename-0.0.1/ebin
+	cp build/rumprun-packages/erlang/examples/setnodename/*.beam _deployed/lib/erlang/lib/setnodename-0.0.1/ebin
+	$(RUMPRUN_GENISOIMAGE) -o $(PKGNAME)-$(PKGVSN).iso _deployed/
