--- a/Makefile.rumprun
+++ b/Makefile.rumprun
@@ -28,11 +28,11 @@
 
 LOCAL_PATH=$(shell pwd)
 # prefix with local path in search path so that the "erl" application
-# is used by rebar3 (via escript found in host_erlangdist/usr/local/bin)
+# is used by rebar3 (via escript found in host_erlangdist/opt/erlang/lib/erlang/erts-7.3.1/bin)
 # is from this path instead.
 # This will allow running same erlang application on host as the
 # one built for target for maximum consistency.
-BUILT_ERL_BIN_PATH=$(LOCAL_PATH):$(LOCAL_PATH)/build/rumprun-packages/erlang/build/host_erlangdist/usr/local/bin
+BUILT_ERL_BIN_PATH=$(LOCAL_PATH):$(LOCAL_PATH)/build/rumprun-packages/erlang/build/host_erlangdist/opt/erlang/lib/erlang/erts-7.3.1/bin
 
 ERLANG_BASE_META_PATH=$(LOCAL_PATH)/build/rumprun-packages/erlang
 
