run through base work before adding more releases.

--- a/rebar.config
+++ b/rebar.config
@@ -48,10 +48,12 @@
 ]}.
 
 {relx, [{release, { helloer, "0.1.0" },
-         [helloer]},
+         [helloer],
+         [
+          {sys_config, "./config/helloer-sys.config"},
+          {vm_args, "./config/helloer-vm.args"}
+         ]},
 
-        {sys_config, "./config/sys.config"},
-        {vm_args, "./config/vm.args"},
 
         {dev_mode, true},
         {include_erts, false},
