--- a/rebar.config
+++ b/rebar.config
@@ -38,6 +38,9 @@
 {erl_opts, [debug_info, warn_unused_vars, warn_shadow_vars, warn_unused_import,
             warnings_as_errors, {parse_transform, lager_transform}]}.
 
+% Superset of all dependencies which may be required by all the
+% releases. Note that these will only be included only when
+% explicitly asked by <app>/src/<app>.app.src
 {deps, [
   {'lager', ".*", {
     git, "git://github.com/basho/lager.git", "master"}},
@@ -52,6 +55,12 @@
          [
           {sys_config, "./config/helloer-sys.config"},
           {vm_args, "./config/helloer-vm.args"}
+         ]},
+        {release, { uclimate, "0.1.0" },
+         [uclimate],
+         [
+          {sys_config, "./config/uclimate-sys.config"},
+          {vm_args, "./config/uclimate-vm.args"}
          ]},
 
 
