tell rebar about uwiki (missed earlier).

--- a/rebar.config
+++ b/rebar.config
@@ -62,6 +62,12 @@
           {sys_config, "./config/uclimate-sys.config"},
           {vm_args, "./config/uclimate-vm.args"}
          ]},
+        {release, { uwiki, "0.1.0" },
+         [uwiki],
+         [
+          {sys_config, "./config/uwiki-sys.config"},
+          {vm_args, "./config/uwiki-vm.args"}
+         ]},
 
 
         {dev_mode, true},
