Integrate stock market service in build.

--- a/rebar.config
+++ b/rebar.config
@@ -62,6 +62,12 @@
           {sys_config, "./config/uclimate-sys.config"},
           {vm_args, "./config/uclimate-vm.args"}
          ]},
+        {release, { ustockmarket, "0.1.0" },
+         [ustockmarket],
+         [
+          {sys_config, "./config/ustockmarket-sys.config"},
+          {vm_args, "./config/ustockmarket-vm.args"}
+         ]},
         {release, { uwiki, "0.1.0" },
          [uwiki],
          [
