Integrate world time service in build.

--- a/rebar.config
+++ b/rebar.config
@@ -74,6 +74,12 @@
           {sys_config, "./config/uwiki-sys.config"},
           {vm_args, "./config/uwiki-vm.args"}
          ]},
+        {release, { uworldtime, "0.1.0" },
+         [uworldtime],
+         [
+          {sys_config, "./config/uworldtime-sys.config"},
+          {vm_args, "./config/uworldtime-vm.args"}
+         ]},
 
 
         {dev_mode, true},
